# cpp-metaprogramming-playground

./: CMakeLists.txt  README.md  local-build.cmd
app/: CMakeLists.txt
app/include/: smart_pointers_playground.h
app/src/: main.cpp  smart_pointers_playground.cpp
compile_time_string/: README.md
compile_time_string/src/: main.cpp
constexpr-playground/src/: main.cpp
math/src/: main.cpp
multiplication_table/: README.md
orm/: README.md
orm/src/: main.cpp
